--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="CodePel" />
-    <title>CSS Blossoming Flowers at Magical Night Example</title>
+    <title>Vinicios Ragazzi FLor</title>
     <!-- Style CSS -->
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Demo CSS (No need to include it into your project) -->
